visula_core/src/snapshots/visula_core__value__tests__shared_across_fields.snap
---
source: visula_core/src/value.rs
expression: wgsl
---
struct Fields {
    a: f32,
    b: f32,
}

@vertex 
fn vs_main(@location(0) value: f32) -> @builtin(position) vec4<f32> {
    var fields: Fields;

    let phase: f32 = (value * 2f);
    fields.a = cos(phase);
    fields.b = sin(phase);
    let output: Fields = fields;
    return vec4(0f);
}
