visula_core/src/snapshots/visula_core__value__tests__unshared_sub_expression.snap
---
source: visula_core/src/value.rs
expression: wgsl
---
struct Fields {
    a: vec3<f32>,
}

@vertex 
fn vs_main(@location(0) value: f32) -> @builtin(position) vec4<f32> {
    var fields: Fields;

    fields.a = vec3<f32>(cos((value * 2f)), sin((value * 2f)), (value * 2f));
    let output: Fields = fields;
    return vec4(0f);
}
